Updated the Featured Home page to get rid of some photos, fix layout issues that resulted, and to updaate copy, including getting rid of Shine Team realtors info.

--- a/public_html/styles/concept.css
+++ b/public_html/styles/concept.css
@@ -135,6 +135,11 @@ a:hover {
 	font-size: 14px;
 	color: #683D15;
 }
+
+.concept #container #mainContent #builderWelcome ul {
+	font-size: 14px;
+	color: #683D15;
+}
 .concept #container #mainContent .green {
 	width: 85%;
 	margin: 00px auto;
