--- a/public_html/styles/download.css
+++ b/public_html/styles/download.css
@@ -6,7 +6,7 @@
 
 #thumbs3 {
 	width: 518px;
-	height: 300px;
+	height: 265px;
 	overflow: hidden;
 }
 
